2003-05-21  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/m4/m4browser.c: Regen.
	* parsers/m4/m4browser.l: Add FUNCTION rule
	to support read, write, and call xrefs
	inside macros. Set the function declaration
	to include the entire text of the macro
	instead of just the macro name.
	* tests/parsers/m4.test: Add new var test
	cases for var xrefs in macros. Update
	macro definition test cases so that
	whole function is included, not just name.
	Add test for comments in macros.

2003-05-20  John Lash  <jkl@speakeasy.net>

	* gui/misc.tcl (sn_session, sn_nosplash):
	* gui/sninit.tcl (sn_read_commandline_arguments):
	Add option --nosplash to turn off splash screen.
	Helps when running over a slow link.

2003-05-20  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/php/phpbrowser.c: Regen.
	* parsers/php/phpbrowser.l: Add code to parse
	function bodies and generate xrefs for
	function calls inside a function declaration.
	Add new FUNCTION state and use parser state
	stacks so that we can push a mode like COMMENT
	and then pop back into a mode like FUNCTION.
	Handle newlines in addition to spaces and
	tabs as a separator character.
	* tests/parsers/php.test: Add tests for
	functions and comments in functions.

2003-05-17  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/cobol/skeleton.c (main):
	* parsers/cpp/skeleton.c (main):
	* parsers/java/skeleton.c (main):
	* parsers/tcl/skeleton.c (main):
	Remove incorrect comment that claimed the
	-x option to the parsers was ignored.

2003-05-15  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/tmeter.tcl (make_scale_window,
	hide_loading_message, sn_loading_message): Remove
	some pointless catch calls.

2003-05-15  John Lash  <jlash@speakeasy.net>

	* gui/tmeter.tcl (sn_loading_message):
	Remove raise call from gui/tmeter.tcl. This eliminates
	a repeated two second pause during the initial
	loading screen. The problem has been seen using both
	gnome and kde desktops and is a bug in the respective